--- a/index-fullneu.html
+++ b/index-fullneu.html
@@ -227,14 +227,19 @@ Mit freundlichen Grüßen
       return { wks: [...new Set((wks||[]).map(String))], candidates };
     }
 
-    function ensureIntro(anrede, addr, name) {
-      let txt = elMSG.value || '';
-      const addrWithName = (name ? name + '\n' : '') + (addr || 'Platz der Republik 1\n11011 Berlin');
-      txt = txt.replace('{MdB_Name_und_Adresse}', addrWithName)
-               .replace('{MdB_Adresse}', addrWithName)
-               .replace('{Anrede}', anrede || 'Sehr geehrte Damen und Herren');
-      elMSG.value = txt.trimEnd();
-      elMSG.dataset.tpl = elMSG.value;
+    /** MdB in die BASIS-Vorlage einsetzen → neue tpl bauen (ohne Absender-Platzhalter anzutasten) */
+    function ensureIntroOnBase(anrede, addr, name) {
+      const base = elMSG.dataset.base || elMSG.value || '';
+      const addrBlock = ((name ? name : '') + (name && addr ? '\n' : '') + (addr || 'Platz der Republik 1\n11011 Berlin')).trim();
+      const tpl = base
+        .replace('{MdB_Name_und_Adresse}', addrBlock)
+        .replace('{MdB_Adresse}', addrBlock)
+        .replace('{Anrede}', anrede || 'Sehr geehrte Damen und Herren');
+      elMSG.dataset.tpl = tpl;    // 👉 Nur tpl setzen, value nicht direkt überschreiben
+      // Trigger Token-Update unten (Straße/PLZ/Ort) – kein Re-Trigger auf #plz/#city
+      ['#sender_zip','#sender_city'].forEach(sel =>
+        document.querySelector(sel)?.dispatchEvent(new Event('input'))
+      );
     }
 
     function hideSelect() {
@@ -271,12 +276,7 @@ Mit freundlichen Grüßen
       const anrede = opt?.dataset?.anrede || ('Sehr geehrte/r ' + name);
       const address = opt?.dataset?.address || 'Platz der Republik 1\n11011 Berlin';
       elMP.value = name;
-      ensureIntro(anrede, address, name);
-
-      // ✅ nur Tokens unten aktualisieren – kein Re-Trigger auf #plz/#city
-      ['#sender_zip','#sender_city'].forEach(sel =>
-        document.querySelector(sel)?.dispatchEvent(new Event('input'))
-      );
+      ensureIntroOnBase(anrede, address, name);
     }
 
     elSel?.addEventListener('change', () => {
@@ -303,27 +303,26 @@ Mit freundlichen Grüßen
         if (candidates.length === 1) {
           const c = candidates[0];
           elMP.value = c.name;
-          ensureIntro(c.anrede, c.address, c.name);
+          ensureIntroOnBase(c.anrede, c.address, c.name);
         } else if (candidates.length > 1) {
           elMP.value = '';
-          ensureIntro('Sehr geehrte Damen und Herren', 'Platz der Republik 1\n11011 Berlin', '');
+          ensureIntroOnBase('Sehr geehrte Damen und Herren', 'Platz der Republik 1\n11011 Berlin', '');
           showSelect(candidates, wks);
         } else {
           elMP.value = '';
-          ensureIntro('Sehr geehrte Damen und Herren', 'Platz der Republik 1\n11011 Berlin', '');
+          ensureIntroOnBase('Sehr geehrte Damen und Herren', 'Platz der Republik 1\n11011 Berlin', '');
         }
       } catch (e) {
         _mdblog.show('Lookup ERROR: '+e);
         elMP.value = '';
-        ensureIntro('Sehr geehrte Damen und Herren', 'Platz der Republik 1\n11011 Berlin', '');
+        ensureIntroOnBase('Sehr geehrte Damen und Herren', 'Platz der Republik 1\n11011 Berlin', '');
       }
-
-      // ✅ nur sender_* Felder triggern, NICHT #plz/#city → kein Loop
-      ['#sender_zip','#sender_city'].forEach(sel =>
-        document.querySelector(sel)?.dispatchEvent(new Event('input'))
-      );
     }
 
+    // Basisvorlage einmalig sichern
+    if (!elMSG.dataset.base) elMSG.dataset.base = elMSG.value;
+
+    // Live bei PLZ & Ort
     ['input','change','blur'].forEach(ev=>{
       elPLZ?.addEventListener(ev, runLookup);
       elCity?.addEventListener(ev, runLookup);
@@ -344,6 +343,8 @@ Mit freundlichen Grüßen
     const topCity = () => ($('#city')?.value||'').trim();
 
     const cleanStreet = (v) => String(v||'').replace(/\s*,\s*(?=\d)/g,' ').replace(/\s{2,}/g,' ').trim();
+
+    function getTpl(){ return msg.dataset.tpl || msg.dataset.base || msg.value || ''; }
 
     function vals(){
       const m={};
@@ -367,19 +368,20 @@ Mit freundlichen Grüßen
 
     function update(){
       if(!msg)return;
-      if(!msg.dataset.tpl) msg.dataset.tpl = msg.value;
-      msg.value = apply(msg.dataset.tpl, vals());
+      if(!msg.dataset.base) msg.dataset.base = msg.value;  // Basis sichern
+      if(!msg.dataset.tpl)  msg.dataset.tpl  = msg.dataset.base; // Starttpl
+      msg.value = apply(getTpl(), vals());
     }
 
-    [...Object.values(F), '#plz', '#city'].forEach(sel=>$(sel)?.addEventListener('input',update));
+    [...Object.values(F), '#plz', '#city', '#sender_zip', '#sender_city'].forEach(sel=>$(sel)?.addEventListener('input',update));
     update();
 
     form?.addEventListener('submit', async (e) => {
       e.preventDefault();
       update();
 
-      if (/\{Vorname\}|\{Nachname\}|\{Straße\}/.test(msg.value)) {
-        alert('Bitte füllen Sie Vorname, Nachname und Straße & Nr. aus.');
+      if (/\{Vorname\}|\{Nachname\}|\{Straße\}|\{PLZ\}|\{Ort\}/.test(msg.value)) {
+        alert('Bitte füllen Sie alle Absenderfelder aus.');
         return;
       }
 
@@ -405,7 +407,10 @@ Mit freundlichen Grüßen
           box.textContent = 'Danke! Ihr Brief wurde erfolgreich eingereicht. Vorgangs-ID: ' + (data.queueId||'');
           box.style.display = 'block';
           form.reset();
-          msg.dataset.tpl = msg.value = msg.value;
+          // Vorlage zurücksetzen
+          msg.value = msg.dataset.base;
+          msg.dataset.tpl = msg.dataset.base;
+          update();
         } else {
           alert('Fehler: ' + (data.error || 'Unbekannt'));
         }
@@ -419,6 +424,8 @@ Mit freundlichen Grüßen
   </script>
 </body>
 </html>
+
+
 
 
 
