--- a/index-fullneu.html
+++ b/index-fullneu.html
@@ -210,7 +210,7 @@ Mit freundlichen Grüßen
                   <span>Kopie an mich per <strong>E-Mail</strong> senden</span>
                 </label>
               </div>
-              <p class="sub">Wir verwenden Ihre Angaben ausschließlich zur Zustellung des Briefes. Details siehe <a href="datenschutz.html">Datenschutz</a>.</p>
+              <p class="sub">Wir verwenden Ihre Angaben ausschließlich zur Zustellung des Briefes. Details siehe <a href="Datenschutz.html">Datenschutz</a>.</p>
             </div>
           </fieldset>
 
@@ -221,7 +221,7 @@ Mit freundlichen Grüßen
 
     <footer class="site-footer middle">
       <nav class="legal">
-        <a href="https://www.aktionsolarstrom.de/">Zur Startseite</a> · <a href="impressum.html">Impressum</a> · <a href="datenschutz.html">Datenschutz</a>
+        <a href="https://www.aktionsolarstrom.de/">Zur Startseite</a> · <a href="Impressum.html">Impressum</a> · <a href="Datenschutz.html">Datenschutz</a>
       </nav>
     </footer>
   </div>
@@ -229,3 +229,4 @@ Mit freundlichen Grüßen
   <!-- Skripte unverändert belassen -->
 </body>
 </html>
+
