--- a/index-fullneu.html
+++ b/index-fullneu.html
@@ -25,6 +25,7 @@
     textarea { min-height: 240px; }
     .grid { display:grid; grid-template-columns: 1fr 1fr; gap:16px; }
     @media (max-width:720px){ .grid{ grid-template-columns:1fr; } }
+
     .actions { margin-top: 16px; text-align:center; }
     button[type="submit"]{
       padding: 12px 18px;
@@ -32,8 +33,9 @@
       background:var(--brand); color:#fff; font-weight:700;
       cursor:pointer; display:inline-flex; align-items:center; gap:8px;
     }
-    button[type="submit"]::after{ content:"✈️"; font-size:1.2em; }
+    button[type="submit"]::after{ content:"✈️"; font-size:1.15em; }
     .success{ display:none; margin-top:14px; padding:12px; border:1px solid #bfe3bf; background:#eefeef; border-radius:6px; color:#145214; }
+
     footer .legal { text-align:center; display:block; margin: 24px 0 10px; }
     footer a { color: #333; }
     .hint { font-size:.9rem; color:#555; margin:6px 0 0; }
@@ -189,7 +191,7 @@ Mit freundlichen Grüßen
       if(!DEBUG) return;
       badge.textContent = 'MDB: ' + msg;
       badge.style.cssText = 'position:fixed;right:8px;bottom:8px;z-index:99999;padding:6px 8px;border-radius:6px;font:12px/1.2 system-ui;background:'+(ok?'#e8f7ec':'#fff3cd')+';border:1px solid '+(ok?'#7ad08d':'#e6c45c')+';color:#222';
-      document.body.appendChild(badge);
+      if(!badge.parentNode) document.body.appendChild(badge);
       console.log('[MDB]', msg);
     }
     window._mdblog = { show, DEBUG };
@@ -225,8 +227,12 @@ Mit freundlichen Grüßen
 
     async function loadJson(url){ return _fetchJson(url); }
 
+    // Laufende Anfrage-ID → nur neueste Antwort anwenden
+    let requestId = 0;
+    let lastKey = '';
+    let lastNamesKey = '';
+
     async function findCandidates(plz, cityRaw) {
-      _mdblog.show('Start Lookup PLZ='+plz+' Ort='+cityRaw);
       const [plzMap, wkMap, ortMap] = await Promise.all([
         loadJson('assets/data/plz_to_wk.json'),
         loadJson('assets/data/wk_to_mdb.json'),
@@ -234,21 +240,18 @@ Mit freundlichen Grüßen
       ]);
 
       let wks = plzMap[plz] || [];
-      _mdblog.show('PLZ→WK: '+JSON.stringify(wks));
-
       const cityKey = norm(cityRaw);
 
       if ((!wks || !wks.length) && cityKey) {
         const hits = Object.entries(ortMap).filter(([k]) => k.startsWith(cityKey)).map(([, arr]) => arr);
         wks = [...new Set(hits.flat())];
-        _mdblog.show('Fallback ORT→WK: '+JSON.stringify(wks));
       }
 
       if (wks.length > 1 && cityKey) {
         const hits = Object.entries(ortMap).filter(([k]) => k.startsWith(cityKey)).map(([, arr]) => arr);
         const byCity = new Set([].concat(...hits));
         const narrowed = wks.filter(w => byCity.has(String(w)));
-        if (narrowed.length) { wks = narrowed; _mdblog.show('Eingrenzung via Ort: '+JSON.stringify(wks), true); }
+        if (narrowed.length) wks = narrowed;
       }
 
       const candidates = (wks||[])
@@ -262,11 +265,9 @@ Mit freundlichen Grüßen
           address: (m.bundestag_address || 'Platz der Republik 1\n11011 Berlin').replace(/\s*\n\s*/g,'\n').trim()
         }));
 
-      _mdblog.show('Kandidaten: '+candidates.length, true);
       return { wks: [...new Set((wks||[]).map(String))], candidates };
     }
 
-    // MdB-Adresse + Anrede in die VORLAGE einsetzen (mit „Deutscher Bundestag“)
     function ensureIntroOnBase(anrede, addr, name) {
       const base = elMSG.dataset.base || elMSG.value || '';
       const addrLine = (addr || 'Platz der Republik 1\n11011 Berlin').replace(/\s*\n\s*/g,'\n').trim();
@@ -276,21 +277,22 @@ Mit freundlichen Grüßen
         .replace('{MdB_Adresse}', addrBlock)
         .replace('{Anrede}', anrede || 'Sehr geehrte Damen und Herren');
       elMSG.dataset.tpl = tpl;
-
-      // ⚠️ Nur Token-Ersetzung anstoßen – NICHT PLZ/Ort erneut triggern (vermeidet Loop/Flimmern)
-      ['#sender_zip','#sender_city'].forEach(sel =>
-        document.querySelector(sel)?.dispatchEvent(new Event('input'))
-      );
+      // kein künstliches input-Event → das Live-Token-Script aktualisiert den Text
     }
 
     function hideSelect(){
       if (selWrap) selWrap.style.display='none';
       if (elSel) elSel.innerHTML = '';
       if (elHint) elHint.textContent = '';
+      lastNamesKey = '';
     }
 
     function showSelect(cands, wks){
       if (!selWrap || !elSel) return;
+
+      const namesKey = JSON.stringify(cands.map(c=>c.name+'|'+c.party));
+      if (selWrap.style.display==='block' && namesKey===lastNamesKey) return; // unverändert
+
       elSel.innerHTML = '';
       const opt0 = document.createElement('option');
       opt0.value = ''; opt0.textContent = 'Bitte Abgeordnete:n auswählen …';
@@ -307,6 +309,7 @@ Mit freundlichen Grüßen
 
       elHint.textContent = 'Mehrere Wahlkreise ('+wks.join(', ')+').';
       selWrap.style.display='block';
+      lastNamesKey = namesKey;
     }
 
     function chooseCandidateByName(name){
@@ -321,7 +324,6 @@ Mit freundlichen Grüßen
     elSel?.addEventListener('change', ()=>{
       const name = elSel.value;
       if(!name) return;
-      _mdblog.show('Auswahl: '+name, true);
       chooseCandidateByName(name);
     });
 
@@ -330,44 +332,40 @@ Mit freundlichen Grüßen
       if(name) chooseCandidateByName(name);
     });
 
-    // Debounce
+    // Debounce nur, wenn PLZ schon gültig ist
     let lookupTimer=null;
-    function scheduleLookup(delay=350){ clearTimeout(lookupTimer); lookupTimer=setTimeout(runLookup, delay); }
+    function scheduleLookup(delay){
+      clearTimeout(lookupTimer);
+      if (!/^\d{5}$/.test((elPLZ?.value||'').trim())) return;
+      lookupTimer=setTimeout(runLookup, delay);
+    }
 
-    // Reentrancy-Lock gegen Flimmern
-    let LOOKUP_LOCK = false;
-
-    // Basisvorlage einmalig sichern
     if(!elMSG.dataset.base) elMSG.dataset.base = elMSG.value;
 
-    // PLZ: bei 5 Ziffern sofort lookup
     elPLZ?.addEventListener('input', ()=>{
       const v=(elPLZ.value||'').trim();
-      if(/^\d{5}$/.test(v)) scheduleLookup(0);
+      if(/^\d{5}$/.test(v)) runLookup(); // sofort
     });
-    // Ort: ab 3 Zeichen mit debounce
     elCity?.addEventListener('input', ()=>{
-      const v=(elCity.value||'').trim();
-      if(v.length>=3) scheduleLookup(350);
-    });
-    ['change','blur'].forEach(ev=>{
-      elPLZ?.addEventListener(ev, runLookup);
-      elCity?.addEventListener(ev, runLookup);
+      const city=(elCity.value||'').trim();
+      if(city.length>=3) scheduleLookup(600);
     });
 
     async function runLookup(){
-      if (LOOKUP_LOCK) return;
-      LOOKUP_LOCK = true;
-
-      hideSelect();
       const plz=(elPLZ?.value||'').trim();
       const city=(elCity?.value||'').trim();
-      if(!/^\d{5}$/.test(plz)){ _mdblog.show('PLZ ungültig'); LOOKUP_LOCK=false; return; }
+      if(!/^\d{5}$/.test(plz)) return;
 
+      const key = plz + '|' + norm(city);
+      if (key === lastKey && selWrap.style.display==='block') return;
+
+      const myId = ++requestId; // ich bin die neueste Anfrage
       try{
         const { wks, candidates } = await findCandidates(plz, city);
+        if (myId !== requestId) return; // spätere Antwort hat übernommen
 
         if(candidates.length===1){
+          hideSelect();
           const c=candidates[0];
           elMP.value=c.name;
           ensureIntroOnBase(c.anrede, c.address, c.name);
@@ -376,21 +374,21 @@ Mit freundlichen Grüßen
           ensureIntroOnBase('Sehr geehrte Damen und Herren','Platz der Republik 1\n11011 Berlin','');
           showSelect(candidates, wks);
         }else{
+          hideSelect();
           elMP.value='';
           ensureIntroOnBase('Sehr geehrte Damen und Herren','Platz der Republik 1\n11011 Berlin','');
         }
+        lastKey = key;
       }catch(e){
-        _mdblog.show('Lookup ERROR: '+e);
+        hideSelect();
         elMP.value='';
         ensureIntroOnBase('Sehr geehrte Damen und Herren','Platz der Republik 1\n11011 Berlin','');
-      } finally {
-        LOOKUP_LOCK = false;
       }
     }
   })();
   </script>
 
-  <!-- ==== Live-Tokenersetzung + AJAX-Submit ==== -->
+  <!-- ==== Live-Tokenersetzung + robuster AJAX-Submit ==== -->
   <script>
   (function(){
     const $ = (s) => document.querySelector(s);
@@ -401,7 +399,6 @@ Mit freundlichen Grüßen
 
     const topPLZ  = () => ($('#plz')?.value||'').trim();
     const topCity = () => ($('#city')?.value||'').trim();
-
     const cleanStreet = (v) => String(v||'').replace(/\s*,\s*(?=\d)/g,' ').replace(/\s{2,}/g,' ').trim();
 
     function getTpl(){ return msg.dataset.tpl || msg.dataset.base || msg.value || ''; }
@@ -427,8 +424,8 @@ Mit freundlichen Grüßen
     }
 
     function update(){
-      if(!msg) return;
-      if(!msg.dataset.base) msg.dataset.base = msg.value;      // Basis sichern
+      if(!msg)return;
+      if(!msg.dataset.base) msg.dataset.base = msg.value;  // Basis sichern
       if(!msg.dataset.tpl)  msg.dataset.tpl  = msg.dataset.base; // Starttpl
       msg.value = apply(getTpl(), vals());
     }
@@ -436,7 +433,6 @@ Mit freundlichen Grüßen
     [...Object.values(F), '#plz', '#city', '#sender_zip', '#sender_city'].forEach(sel=>$(sel)?.addEventListener('input',update));
     update();
 
-    // AJAX Submit
     form?.addEventListener('submit', async (e) => {
       e.preventDefault();
       update();
@@ -461,9 +457,18 @@ Mit freundlichen Grüßen
           headers: { 'Content-Type':'application/json' },
           body: JSON.stringify(body)
         });
-        const data = await res.json();
 
-        if (data.ok){
+        // robustes Parsen
+        const ct = res.headers.get('content-type') || '';
+        let data = null;
+        if (ct.includes('application/json')) {
+          data = await res.json();
+        } else {
+          const text = await res.text();
+          throw new Error(`Serverantwort kein JSON (Status ${res.status}). ${text.slice(0,200)}`);
+        }
+
+        if (res.ok && data?.ok){
           const box = document.getElementById('successMessage');
           box.textContent = 'Danke! Ihr Brief wurde erfolgreich eingereicht. Vorgangs-ID: ' + (data.queueId||'');
           box.style.display = 'block';
@@ -472,14 +477,14 @@ Mit freundlichen Grüßen
           msg.value = msg.dataset.base;
           msg.dataset.tpl = msg.dataset.base;
           update();
-          // Select-Block zurücksetzen
+          // Auswahl zurücksetzen
           const wrap = document.getElementById('mpSelectWrap');
           if (wrap){ wrap.style.display='none'; document.getElementById('mp_select').innerHTML=''; document.getElementById('mp_hint').textContent=''; }
         } else {
-          alert('Fehler: ' + (data.error || 'Unbekannt'));
+          alert('Fehler: ' + (data?.error || `Status ${res.status}`));
         }
       } catch(err){
-        alert('Verbindungsfehler: ' + err.message);
+        alert('Verbindungsfehler: ' + (err?.message || err));
       } finally {
         btn?.removeAttribute('disabled');
       }
@@ -488,6 +493,7 @@ Mit freundlichen Grüßen
   </script>
 </body>
 </html>
+
 
 
 
